deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fast-api
  template:
    metadata:
      labels:
        app: fast-api
    spec:
      containers:
      - name: fast-api
        image: sidpalas/k8s-getting-started:0.0.3
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
