service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fast-api
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: fast-api
