ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - 152.42.144.199.sslip.io
      - fast.152.42.144.199.sslip.io 
      - nginx.152.42.144.199.sslip.io 
    secretName: quickstart-example-tls
  rules:
    - host: 152.42.144.199.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuard
                port:
                  number: 80
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /fast
            pathType: Prefix
            backend:
              service:
                name: fast-api
                port:
                  number: 80     
          - path: /fast/nginx
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /nginx/fast
            pathType: Prefix
            backend:
              service:
                name: fast-api
                port:
                  number: 80    
    - host: fast.152.42.144.199.sslip.io  # New domain for Flask
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fast-api  # Flask service name
                port:
                  number: 80
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: nginx  # Flask service name
                port:
                  number: 80
    - host: nginx.152.42.144.199.sslip.io  # New domain for Flask
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx  # Flask service name
                port:
                  number: 80
          - path: /fast
            pathType: Prefix
            backend:
              service:
                name: fast-api  # Flask service name
                port:
                  number: 80
